add example to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Original calendar URL: <input type="text" name="url" value="" size="40" /></p>
         <p>This is the location the public calendar is pulled from.</p>
         <p>RegExp applied to description: <input type="text" name="regex" value="" size="40" /></p>
-        <p>Only entries matching this regular expression are passed through, everything else is left out of the generated calendar file.</p>
+        <p>Only entries matching this regular expression are passed through, everything else is left out of the generated calendar file. If you want to select a few appointments, simply enter their names separated by the character '|', for example "meeting|lunch|dinner".</p>
         <p>Timezone the calendar is in:
         
         <select name="tz" size="1">
